<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/app_title"
        android:textSize="32sp"
        android:gravity="center"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/app_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/app_description"
        android:textSize="18sp"
        android:lineHeight="27sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/app_title_text"/>

    <LinearLayout
        android:id="@+id/roll_input_elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@id/app_description_title">

        <SeekBar
            android:id="@+id/roll_input_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80" />

        <TextView
            android:id="@+id/roll_input_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/roll_input_text_default"
            android:gravity="center"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/roll_input_elements_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roll_input_elements_description"
        android:gravity="center"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/roll_input_elements"
        />

    <LinearLayout
        android:id="@+id/person_input_elements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@id/roll_input_elements_label">

        <SeekBar
            android:id="@+id/person_input_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80" />

        <TextView
            android:id="@+id/person_input_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/roll_input_text_default"
            android:gravity="center"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/person_input_elements_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_input_elements_description"
        android:gravity="center"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@id/person_input_elements"
        />

    <Button
        android:id="@+id/calculate_stats_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/person_input_elements_label"
        android:text="@string/calculate_stats_button_label" />




</androidx.constraintlayout.widget.ConstraintLayout>